--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solar</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="page__body">
   <header class="header">
     <div class="header__container">
-      <img src="/images/logo.svg" alt="solar logo" class="header__logo logo" width="182" height="51">
+      <img src="./images/logo.svg" alt="solar logo" class="header__logo logo" width="182" height="51">
       <div class="header__content">
         <span class="header__subtitle">Зелёный тариф для дома и бизнеса</span>
         <h1 class="header__title">Солнечная электростанция<br> <span>с доходом от 1000$ в месяц</span></h1>
@@ -23,22 +23,22 @@
       <ul class="header__social-list social-list">
         <li class="social-list__item"><a href="#" class="social-list__link" aria-label="Мы в Instagram">
             <svg class="social-list__icon" width="30" height="30">
-              <use xlink:href="/images/sprite.svg#instagram"></use>
+              <use xlink:href="./images/sprite.svg#instagram"></use>
             </svg>
           </a></li>
         <li class="social-list__item"><a href="" class="social-list__link">
             <svg class="social-list__icon" width="30" height="30">
-              <use xlink:href="/images/sprite.svg#telegram"></use>
+              <use xlink:href="./images/sprite.svg#telegram"></use>
             </svg>
           </a></li>
         <li class="social-list__item"><a href="" class="social-list__link">
             <svg class="social-list__icon" width="30" height="30">
-              <use xlink:href="/images/sprite.svg#whatsapp"></use>
+              <use xlink:href="./images/sprite.svg#whatsapp"></use>
             </svg>
           </a></li>
         <li class="social-list__item"><a href="" class="social-list__link">
             <svg class="social-list__icon" width="30" height="30">
-              <use xlink:href="/images/sprite.svg#facebook"></use>
+              <use xlink:href="./images/sprite.svg#facebook"></use>
             </svg>
           </a></li>
       </ul>
@@ -46,7 +46,7 @@
   </header>
   <main class="main"></main>
   <footer class="footer"></footer>
-  <script src="scripts.js"></script>
+  <script src="./scripts.js"></script>
 </body>
 
 </html>
