Добавляет секцию услуг

--- a/index.html
+++ b/index.html
@@ -44,7 +44,37 @@
       </ul>
     </div>
   </header>
-  <main class="main"></main>
+  <main class="main">
+    <section class="services">
+      <div class="services__container">
+        <h2 class="services__title">Услуги</h2>
+        <div class="services__wrap">
+          <dl class="services__list services-list">
+            <dt class="services-list__title">Полный комплект солнечной электростанции</dt>
+            <dd class="services-list__description">74 модели солнечных панелей, 31 модель инверторов, провода с
+              повышенной устойчивостью к атмосферным условиям, качественные соединители, контроллеры зарядов и
+              надежные
+              гелевые аккумуляторы с увеличенным сроком службы.</dd>
+            <dt class="services-list__title">Подбор оборудования с максимальной производительностью</dt>
+            <dd class="services-list__description">Подбираем солнечные панели с учетом расположения Вашего дома,
+              количеством прямого и рассеянного излучения, для того, чтобы Ваша электростанция - вырабатывала
+              максимальное количество электроэнергии и окупилась как можно быстрее.</dd>
+            <dt class="services-list__title">Монтаж оборудования в соответствии с ГОСТом</dt>
+            <dd class="services-list__description">Монтаж производится в точном соответствии с ГОСТом, с учетом закона
+              о
+              «Зеленом тарифе» и требованиями Облэнерго. При этом, мы учитываем, чтобы солнечная станция имела
+              максимально возможную производительность.</dd>
+            <dt class="services-list__title">Помощь в подключении к «Зеленому тарифу»</dt>
+            <dd class="services-list__description">Всю бюрократическую процедуру по подключению Вашей электростанции к
+              «Зеленому тарифу», мы берем на себя, в том числе по увеличению договорной мощности вашего дома. При
+              заказе
+              солнечной электростанции эта услуга абсолютно бесплатна.</dd>
+          </dl>
+          <img src="/images/services.jpg" alt="Солнечные батареи в поле" class="services__image">
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="footer"></footer>
   <script src="/scripts.js"></script>
 </body>
