Добавляет секцию тарифов

--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
         </div>
       </div>
     </section>
+    <section class="rates">
+      <div class="rates__container">
+        <h2 class="rates__title">Зеленый тариф</h2>
+        <div class="rates__wrap">
+          <div class="rates__advatages">
+            <ul class="rates-advantage__list">
+              <li class="rates__item rates-item rates-item--active">
+                <a href="#" class="rates-item__link">Продажа</a>
+                <div class="rates-item-slider"></div>
+                <dl class="rates-item-list">
+
+                </dl>
+              </li>
+            </ul>
+          </div>
+          <div class="rates__description">
+            <p class="rates__description-text">«Зеленый тариф» — это особые тарифные условия, которые позволяют частным
+              домохозяйствам не только потреблять, но и продавать выработанное домашними солнечными электростанциями
+              электричество в электросеть общего пользования.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer"></footer>
   <script src="/scripts.js"></script>
